[project]
name = "spoon-agent-showcase"
version = "0.1.0"
description = "SpoonOS Agent Showcase - ReAct and Graph Agent implementations"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}

dependencies = [
    "spoon-core>=0.1.0",
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "openai>=1.0.0",
    "anthropic>=0.34.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
web3 = [
    "web3>=6.0.0",
    "eth-account>=0.13.0",
]
memory = [
    "mem0ai>=0.1.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/your-username/spoon-agent-showcase"
Documentation = "https://github.com/your-username/spoon-agent-showcase#readme"
Repository = "https://github.com/your-username/spoon-agent-showcase"
Issues = "https://github.com/your-username/spoon-agent-showcase/issues"

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["agents", "tools", "skills"]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
